tests/derive/enum.stderr
error: derive(Bundle) only supports structs
 --> $DIR/enum.rs:3:10
  |
3 | #[derive(Bundle)]
  |          ^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
