tests/derive/enum.rs
use hecs::{Bundle, Query};

#[derive(Query)]
enum Foo {}

#[derive(Bundle)]
enum Bar {}

fn main() {}
